[tool.poetry]
name = "sqlalchemy-pg"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun <balotech514@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlalchemy_pg"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
